Update all notebook paths to use data/models/ structure

--- a/hw4/code/Solution1/sol1.ipynb
+++ b/hw4/code/Solution1/sol1.ipynb
@@ -56,8 +56,8 @@
     "N_WORKERS = max(1, mp.cpu_count() - 1)  # Leave one core free\n",
     "\n",
     "# Directories\n",
-    "MODELS_DIR = Path(\"models\")\n",
-    "MODELS_DIR.mkdir(exist_ok=True)\n",
+    "MODELS_DIR = Path(\"../../data/models/Solution1\")\n",
+    "MODELS_DIR.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "# Log files\n",
     "GRIDSEARCH_LOG = \"bnn_gridsearch.log\"\n",
