--- a/hw4/code/Solution1_5k/sol1_5k.ipynb
+++ b/hw4/code/Solution1_5k/sol1_5k.ipynb
@@ -57,8 +57,8 @@
     "N_WORKERS = max(1, mp.cpu_count() - 1)  # Leave one core free\n",
     "\n",
     "# Directories\n",
-    "MODELS_DIR = Path(\"models\")\n",
-    "MODELS_DIR.mkdir(exist_ok=True)\n",
+    "MODELS_DIR = Path(\"../../data/models/Solution1_5k\")\n",
+    "MODELS_DIR.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "# Log files\n",
     "GRIDSEARCH_LOG = \"bnn_gridsearch_5k.log\"\n",
