Update MODELS_DIR_S2 path in sol2.ipynb to point to data/models/Solution2

--- a/hw4/code/Solution2/sol2.ipynb
+++ b/hw4/code/Solution2/sol2.ipynb
@@ -676,7 +676,7 @@
     "    p_spam_test = pm.Deterministic(\"p_test\", pm.math.invlogit(logit_test_bounded))",
     "    ",
     "    trace = pm.sample(",
-    "\n# Save test fit to pkl file\nfrom pathlib import Path\nfrom joblib import dump\nMODELS_DIR_S2 = Path(\"models\")\nMODELS_DIR_S2.mkdir(exist_ok=True)\ntest_filename_s2 = MODELS_DIR_S2 / f\"spam_logistic_regression_test_d{DRAWS}_t{TUNE}.pkl\"\ndump(trace, test_filename_s2, compress=3)\nprint(f\"Saved test fit to {test_filename_s2.name}\")\n"
+    "\n# Save test fit to pkl file\nfrom pathlib import Path\nfrom joblib import dump\nMODELS_DIR_S2 = Path(\"../../data/models/Solution2\")\nMODELS_DIR_S2.mkdir(exist_ok=True, parents=True)\ntest_filename_s2 = MODELS_DIR_S2 / f\"spam_logistic_regression_test_d{DRAWS}_t{TUNE}.pkl\"\ndump(trace, test_filename_s2, compress=3)\nprint(f\"Saved test fit to {test_filename_s2.name}\")\n"
    ]
   },
   {
